# periodic

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  periodic.pc.in  periodic.spec.in
examples/: Makefile.am  periodic-test.c
include/: periodic.h
lib/: ChangeLog  Makefile.am  periodic.c
